Fixing a hidden overflow issue on landscape devices.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -249,10 +249,13 @@ a {
 }
 
 @media screen and (min-width: 569px){
-  html, body, #scroller, section{
+  .no-touch, .no-touch body, .no-touch #scroller, .no-touch section{
     height: 100%;
   }
 
+  // html, body, #scroller, section{
+  //     height: 100%;
+  // }
   #scroller section {
     padding: 3em 0 3em 3em;
   }
